--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -100,7 +100,9 @@ margin-right: 20px;
     height: 50px;
 }
     /* ========= Discussion-comments-page-section End =========== */
-
+    .countries-communities-page-section .countries-communities-body .table-section .dic-table thead tr .country {
+        width: 244px;
+    }
 }
 
 @media (min-width:991px) {
@@ -200,6 +202,19 @@ margin-right: 20px;
 }
 .Member-page-section .member-contain-section .member-boday {
     justify-content: center;
+}
+.Document-details-page-section .doc-details-right-section .reviews-section .reviews-box .reviews-chate-box .title-Setion-doc {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    .date-post {
+        margin-left: 0px;
+        margin-top: 10px;
+    }
+}
+.Document-page-section .Doc-card-section .edit-setion div {
+    border-left: 1px solid black;
+    padding: 5px;
 }
 }   
 @media (max-width:280px){
