--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -215,6 +215,12 @@ margin-right: 20px;
 .Document-page-section .Doc-card-section .edit-setion div {
     border-left: 1px solid black;
     padding: 5px;
+
+}
+
+.Document-page-section .Doc-card-section .edit-setion {
+
+    margin-right: 10px;
 }
 }   
 @media (max-width:280px){
