--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -153,6 +153,9 @@
     border-left: 1px solid black;
     padding: 5px;
   }
+  .Document-page-section .Doc-card-section .edit-setion {
+    margin-right: 10px;
+  }
 }
 @media (max-width: 280px) {
   .nvabar-setion .navbar-brand {
