--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -659,6 +659,7 @@ header {
                             border: 1px solid var(--siment);
                             padding: 10px;
                             border-radius: 9px;
+
                             &:focus {
                                 outline: none;
                             }
@@ -693,13 +694,16 @@ header {
                 .reviews-chate-box {
                     width: 500px;
                     margin-left: 20px;
-                    .title-Setion-doc{
+
+                    .title-Setion-doc {
                         display: flex;
                         justify-content: space-between;
+
                         .name-title {
                             font-size: 1.3rem;
-    
+
                         }
+
                         .date-post {
                             color: var(--siment);
                             font-size: 1rem;
@@ -1048,6 +1052,8 @@ header {
 /* =========== Quiz-answer-page-section Start =============*/
 .Quiz-answer-page-section {
     .Quiz-answer-right-section {
+        margin-top: 10px;
+
         .Quiz-que-box {
             background-color: #EEEEEE;
             padding: 20px;
@@ -1300,7 +1306,7 @@ header {
             flex-wrap: wrap;
 
             .first-title {
-                padding:5px 10px;
+                padding: 5px 10px;
                 display: flex;
                 background-color: #D2D6D2;
                 place-items: center;
@@ -1347,7 +1353,7 @@ header {
         margin-top: 10px;
 
         .head-title {
-            
+
             p {
                 font-size: 1.3rem;
                 color: #545454;
@@ -1405,16 +1411,20 @@ header {
                 color: #545454;
             }
         }
-        .input-box{
+
+        .input-box {
             display: flex;
             align-items: center;
-            input{
+
+            input {
                 accent-color: var(--theam-colour);
             }
-            label{
+
+            label {
                 margin-left: 10px;
             }
         }
+
         .table-section {
             .tab-pane {
                 overflow-x: auto;
@@ -1472,6 +1482,7 @@ header {
 .Users-Community-page-section {
     .Users-Community-right-body {
         margin: 10px 0;
+
         .head-title {
             font-size: 1.3rem;
             margin: 10px 0;
@@ -1479,6 +1490,7 @@ header {
 
         .btn-section {
             margin-top: 20px;
+
             .btn-box {
                 border: 1px solid var(--orange);
                 padding: 7px 15px;
