--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -47,6 +47,9 @@
   .loging-page-section .right-contain .from-section .btn-sing-in {
     padding: 10px 25px;
   }
+  .all-blog-contain .baner-img {
+    height: 200px;
+  }
   .all-blog-contain .btn-box .Download-btn {
     width: 116px;
     padding: 5px 10px;
@@ -80,6 +83,24 @@
   .countries-communities-page-section .countries-communities-body .table-section .dic-table thead tr .country {
     width: 244px;
   }
+  /* ================ News-page-section Start ===================== */
+  .News-page-section .news-grid-section .card {
+    width: 100%;
+    border: 1px solid var(--gray);
+  }
+  .News-page-section .news-grid-section .card-box .img-box {
+    height: 200px;
+  }
+  .News-page-section .news-grid-section .card-box .card-body {
+    padding: 10px 15px;
+  }
+  .News-page-section .news-grid-section .card-box .card-body .card-text {
+    padding: 7px 0px;
+    font-size: 1.3rem;
+    color: var(--black);
+    line-height: 28px;
+  }
+  /* ================ News-page-section End ===================== */
 }
 @media (min-width: 991px) {
   .secondary-menu-section .dropdown-section:hover .dropdown-menu {
